docs/envoy/v1.13.0/_sources/api-v2/admin/v2alpha/config_dump.proto.rst.txt
.. _envoy_api_file_envoy/admin/v2alpha/config_dump.proto:

ConfigDump
==========


.. _envoy_api_msg_admin.v2alpha.ConfigDump:

admin.v2alpha.ConfigDump
------------------------

`[admin.v2alpha.ConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L17>`_

The :ref:`/config_dump <operations_admin_interface_config_dump>` admin endpoint uses this wrapper
message to maintain and serve arbitrary configuration information from any component in Envoy.

.. code-block:: json

  {
    "configs": []
  }

.. _envoy_api_field_admin.v2alpha.ConfigDump.configs:

configs
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) This list is serialized and dumped in its entirety at the
  :ref:`/config_dump <operations_admin_interface_config_dump>` endpoint.
  
  The following configurations are currently supported and will be dumped in the order given
  below:
  
  * *bootstrap*: :ref:`BootstrapConfigDump <envoy_api_msg_admin.v2alpha.BootstrapConfigDump>`
  * *clusters*: :ref:`ClustersConfigDump <envoy_api_msg_admin.v2alpha.ClustersConfigDump>`
  * *listeners*: :ref:`ListenersConfigDump <envoy_api_msg_admin.v2alpha.ListenersConfigDump>`
  * *routes*:  :ref:`RoutesConfigDump <envoy_api_msg_admin.v2alpha.RoutesConfigDump>`
  
  You can filter output with the resource and mask query parameters.
  See :ref:`/config_dump?resource={} <operations_admin_interface_config_dump_by_resource>`,
  :ref:`/config_dump?mask={} <operations_admin_interface_config_dump_by_mask>`,
  or :ref:`/config_dump?resource={},mask={}
  <operations_admin_interface_config_dump_by_resource_and_mask>` for more information.
  
  


.. _envoy_api_msg_admin.v2alpha.UpdateFailureState:

admin.v2alpha.UpdateFailureState
--------------------------------

`[admin.v2alpha.UpdateFailureState proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L37>`_


.. code-block:: json

  {
    "failed_configuration": "{...}",
    "last_update_attempt": "{...}",
    "details": "..."
  }

.. _envoy_api_field_admin.v2alpha.UpdateFailureState.failed_configuration:

failed_configuration
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) What the component configuration would have been if the update had succeeded.
  
  
.. _envoy_api_field_admin.v2alpha.UpdateFailureState.last_update_attempt:

last_update_attempt
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) Time of the latest failed update attempt.
  
  
.. _envoy_api_field_admin.v2alpha.UpdateFailureState.details:

details
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Details about the last failed update attempt.
  
  


.. _envoy_api_msg_admin.v2alpha.BootstrapConfigDump:

admin.v2alpha.BootstrapConfigDump
---------------------------------

`[admin.v2alpha.BootstrapConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L52>`_

This message describes the bootstrap configuration that Envoy was started with. This includes
any CLI overrides that were merged. Bootstrap configuration information can be used to recreate
the static portions of an Envoy configuration by reusing the output as the bootstrap
configuration for another Envoy.

.. code-block:: json

  {
    "bootstrap": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.BootstrapConfigDump.bootstrap:

bootstrap
  (:ref:`config.bootstrap.v2.Bootstrap <envoy_api_msg_config.bootstrap.v2.Bootstrap>`) 
  
.. _envoy_api_field_admin.v2alpha.BootstrapConfigDump.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the BootstrapConfig was last updated.
  
  


.. _envoy_api_msg_admin.v2alpha.ListenersConfigDump:

admin.v2alpha.ListenersConfigDump
---------------------------------

`[admin.v2alpha.ListenersConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L62>`_

Envoy's listener manager fills this message with all currently known listeners. Listener
configuration information can be used to recreate an Envoy configuration by populating all
listeners as static listeners or by returning them in a LDS response.

.. code-block:: json

  {
    "version_info": "...",
    "static_listeners": [],
    "dynamic_listeners": []
  }

.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` in the
  last processed LDS discovery response. If there are only static bootstrap listeners, this field
  will be "".
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.static_listeners:

static_listeners
  (:ref:`admin.v2alpha.ListenersConfigDump.StaticListener <envoy_api_msg_admin.v2alpha.ListenersConfigDump.StaticListener>`) The statically loaded listener configs.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.dynamic_listeners:

dynamic_listeners
  (:ref:`admin.v2alpha.ListenersConfigDump.DynamicListener <envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListener>`) State for any warming, active, or draining listeners.
  
  
.. _envoy_api_msg_admin.v2alpha.ListenersConfigDump.StaticListener:

admin.v2alpha.ListenersConfigDump.StaticListener
------------------------------------------------

`[admin.v2alpha.ListenersConfigDump.StaticListener proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L64>`_

Describes a statically loaded listener.

.. code-block:: json

  {
    "listener": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.StaticListener.listener:

listener
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The listener config.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.StaticListener.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Listener was last successfully updated.
  
  


.. _envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListenerState:

admin.v2alpha.ListenersConfigDump.DynamicListenerState
------------------------------------------------------

`[admin.v2alpha.ListenersConfigDump.DynamicListenerState proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L72>`_


.. code-block:: json

  {
    "version_info": "...",
    "listener": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListenerState.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` field at the time
  that the listener was loaded. In the future, discrete per-listener versions may be supported
  by the API.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListenerState.listener:

listener
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The listener config.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListenerState.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Listener was last successfully updated.
  
  


.. _envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListener:

admin.v2alpha.ListenersConfigDump.DynamicListener
-------------------------------------------------

`[admin.v2alpha.ListenersConfigDump.DynamicListener proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L88>`_

Describes a dynamically loaded listener via the LDS API.

.. code-block:: json

  {
    "name": "...",
    "active_state": "{...}",
    "warming_state": "{...}",
    "draining_state": "{...}",
    "error_state": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListener.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name or unique id of this listener, pulled from the DynamicListenerState config.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListener.active_state:

active_state
  (:ref:`admin.v2alpha.ListenersConfigDump.DynamicListenerState <envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListenerState>`) The listener state for any active listener by this name.
  These are listeners that are available to service data plane traffic.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListener.warming_state:

warming_state
  (:ref:`admin.v2alpha.ListenersConfigDump.DynamicListenerState <envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListenerState>`) The listener state for any warming listener by this name.
  These are listeners that are currently undergoing warming in preparation to service data
  plane traffic. Note that if attempting to recreate an Envoy configuration from a
  configuration dump, the warming listeners should generally be discarded.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListener.draining_state:

draining_state
  (:ref:`admin.v2alpha.ListenersConfigDump.DynamicListenerState <envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListenerState>`) The listener state for any draining listener by this name.
  These are listeners that are currently undergoing draining in preparation to stop servicing
  data plane traffic. Note that if attempting to recreate an Envoy configuration from a
  configuration dump, the draining listeners should generally be discarded.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListener.error_state:

error_state
  (:ref:`admin.v2alpha.UpdateFailureState <envoy_api_msg_admin.v2alpha.UpdateFailureState>`) Set if the last update failed, cleared after the next successful update.
  
  



.. _envoy_api_msg_admin.v2alpha.ClustersConfigDump:

admin.v2alpha.ClustersConfigDump
--------------------------------

`[admin.v2alpha.ClustersConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L127>`_

Envoy's cluster manager fills this message with all currently known clusters. Cluster
configuration information can be used to recreate an Envoy configuration by populating all
clusters as static clusters or by returning them in a CDS response.

.. code-block:: json

  {
    "version_info": "...",
    "static_clusters": [],
    "dynamic_active_clusters": [],
    "dynamic_warming_clusters": []
  }

.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` in the
  last processed CDS discovery response. If there are only static bootstrap clusters, this field
  will be "".
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.static_clusters:

static_clusters
  (:ref:`admin.v2alpha.ClustersConfigDump.StaticCluster <envoy_api_msg_admin.v2alpha.ClustersConfigDump.StaticCluster>`) The statically loaded cluster configs.
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.dynamic_active_clusters:

dynamic_active_clusters
  (:ref:`admin.v2alpha.ClustersConfigDump.DynamicCluster <envoy_api_msg_admin.v2alpha.ClustersConfigDump.DynamicCluster>`) The dynamically loaded active clusters. These are clusters that are available to service
  data plane traffic.
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.dynamic_warming_clusters:

dynamic_warming_clusters
  (:ref:`admin.v2alpha.ClustersConfigDump.DynamicCluster <envoy_api_msg_admin.v2alpha.ClustersConfigDump.DynamicCluster>`) The dynamically loaded warming clusters. These are clusters that are currently undergoing
  warming in preparation to service data plane traffic. Note that if attempting to recreate an
  Envoy configuration from a configuration dump, the warming clusters should generally be
  discarded.
  
  
.. _envoy_api_msg_admin.v2alpha.ClustersConfigDump.StaticCluster:

admin.v2alpha.ClustersConfigDump.StaticCluster
----------------------------------------------

`[admin.v2alpha.ClustersConfigDump.StaticCluster proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L129>`_

Describes a statically loaded cluster.

.. code-block:: json

  {
    "cluster": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.StaticCluster.cluster:

cluster
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The cluster config.
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.StaticCluster.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Cluster was last updated.
  
  


.. _envoy_api_msg_admin.v2alpha.ClustersConfigDump.DynamicCluster:

admin.v2alpha.ClustersConfigDump.DynamicCluster
-----------------------------------------------

`[admin.v2alpha.ClustersConfigDump.DynamicCluster proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L138>`_

Describes a dynamically loaded cluster via the CDS API.

.. code-block:: json

  {
    "version_info": "...",
    "cluster": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.DynamicCluster.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` field at the time
  that the cluster was loaded. In the future, discrete per-cluster versions may be supported by
  the API.
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.DynamicCluster.cluster:

cluster
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The cluster config.
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.DynamicCluster.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Cluster was last updated.
  
  



.. _envoy_api_msg_admin.v2alpha.RoutesConfigDump:

admin.v2alpha.RoutesConfigDump
------------------------------

`[admin.v2alpha.RoutesConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L176>`_

Envoy's RDS implementation fills this message with all currently loaded routes, as described by
their RouteConfiguration objects. Static routes configured in the bootstrap configuration are
separated from those configured dynamically via RDS. Route configuration information can be used
to recreate an Envoy configuration by populating all routes as static routes or by returning them
in RDS responses.

.. code-block:: json

  {
    "static_route_configs": [],
    "dynamic_route_configs": []
  }

.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.static_route_configs:

static_route_configs
  (:ref:`admin.v2alpha.RoutesConfigDump.StaticRouteConfig <envoy_api_msg_admin.v2alpha.RoutesConfigDump.StaticRouteConfig>`) The statically loaded route configs.
  
  
.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.dynamic_route_configs:

dynamic_route_configs
  (:ref:`admin.v2alpha.RoutesConfigDump.DynamicRouteConfig <envoy_api_msg_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig>`) The dynamically loaded route configs.
  
  
.. _envoy_api_msg_admin.v2alpha.RoutesConfigDump.StaticRouteConfig:

admin.v2alpha.RoutesConfigDump.StaticRouteConfig
------------------------------------------------

`[admin.v2alpha.RoutesConfigDump.StaticRouteConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L177>`_


.. code-block:: json

  {
    "route_config": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.StaticRouteConfig.route_config:

route_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The route config.
  
  
.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.StaticRouteConfig.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Route was last updated.
  
  


.. _envoy_api_msg_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig:

admin.v2alpha.RoutesConfigDump.DynamicRouteConfig
-------------------------------------------------

`[admin.v2alpha.RoutesConfigDump.DynamicRouteConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L185>`_


.. code-block:: json

  {
    "version_info": "...",
    "route_config": "{...}",
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` field at the time that
  the route configuration was loaded.
  
  
.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig.route_config:

route_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The route config.
  
  
.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the Route was last updated.
  
  



.. _envoy_api_msg_admin.v2alpha.ScopedRoutesConfigDump:

admin.v2alpha.ScopedRoutesConfigDump
------------------------------------

`[admin.v2alpha.ScopedRoutesConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L209>`_

Envoy's scoped RDS implementation fills this message with all currently loaded route
configuration scopes (defined via ScopedRouteConfigurationsSet protos). This message lists both
the scopes defined inline with the higher order object (i.e., the HttpConnectionManager) and the
dynamically obtained scopes via the SRDS API.

.. code-block:: json

  {
    "inline_scoped_route_configs": [],
    "dynamic_scoped_route_configs": []
  }

.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.inline_scoped_route_configs:

inline_scoped_route_configs
  (:ref:`admin.v2alpha.ScopedRoutesConfigDump.InlineScopedRouteConfigs <envoy_api_msg_admin.v2alpha.ScopedRoutesConfigDump.InlineScopedRouteConfigs>`) The statically loaded scoped route configs.
  
  
.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.dynamic_scoped_route_configs:

dynamic_scoped_route_configs
  (:ref:`admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs <envoy_api_msg_admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs>`) The dynamically loaded scoped route configs.
  
  
.. _envoy_api_msg_admin.v2alpha.ScopedRoutesConfigDump.InlineScopedRouteConfigs:

admin.v2alpha.ScopedRoutesConfigDump.InlineScopedRouteConfigs
-------------------------------------------------------------

`[admin.v2alpha.ScopedRoutesConfigDump.InlineScopedRouteConfigs proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L210>`_


.. code-block:: json

  {
    "name": "...",
    "scoped_route_configs": [],
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.InlineScopedRouteConfigs.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name assigned to the scoped route configurations.
  
  
.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.InlineScopedRouteConfigs.scoped_route_configs:

scoped_route_configs
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The scoped route configurations.
  
  
.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.InlineScopedRouteConfigs.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the scoped route config set was last updated.
  
  


.. _envoy_api_msg_admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs:

admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs
--------------------------------------------------------------

`[admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L221>`_


.. code-block:: json

  {
    "name": "...",
    "version_info": "...",
    "scoped_route_configs": [],
    "last_updated": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name assigned to the scoped route configurations.
  
  
.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` field at the time that
  the scoped routes configuration was loaded.
  
  
.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs.scoped_route_configs:

scoped_route_configs
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The scoped route configurations.
  
  
.. _envoy_api_field_admin.v2alpha.ScopedRoutesConfigDump.DynamicScopedRouteConfigs.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the scoped route config set was last updated.
  
  



.. _envoy_api_msg_admin.v2alpha.SecretsConfigDump:

admin.v2alpha.SecretsConfigDump
-------------------------------

`[admin.v2alpha.SecretsConfigDump proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L245>`_

Envoys SDS implementation fills this message with all secrets fetched dynamically via SDS.

.. code-block:: json

  {
    "static_secrets": [],
    "dynamic_active_secrets": [],
    "dynamic_warming_secrets": []
  }

.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.static_secrets:

static_secrets
  (:ref:`admin.v2alpha.SecretsConfigDump.StaticSecret <envoy_api_msg_admin.v2alpha.SecretsConfigDump.StaticSecret>`) The statically loaded secrets.
  
  
.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.dynamic_active_secrets:

dynamic_active_secrets
  (:ref:`admin.v2alpha.SecretsConfigDump.DynamicSecret <envoy_api_msg_admin.v2alpha.SecretsConfigDump.DynamicSecret>`) The dynamically loaded active secrets. These are secrets that are available to service
  clusters or listeners.
  
  
.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.dynamic_warming_secrets:

dynamic_warming_secrets
  (:ref:`admin.v2alpha.SecretsConfigDump.DynamicSecret <envoy_api_msg_admin.v2alpha.SecretsConfigDump.DynamicSecret>`) The dynamically loaded warming secrets. These are secrets that are currently undergoing
  warming in preparation to service clusters or listeners.
  
  
.. _envoy_api_msg_admin.v2alpha.SecretsConfigDump.DynamicSecret:

admin.v2alpha.SecretsConfigDump.DynamicSecret
---------------------------------------------

`[admin.v2alpha.SecretsConfigDump.DynamicSecret proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L247>`_

DynamicSecret contains secret information fetched via SDS.

.. code-block:: json

  {
    "name": "...",
    "version_info": "...",
    "last_updated": "{...}",
    "secret": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.DynamicSecret.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name assigned to the secret.
  
  
.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.DynamicSecret.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information.
  
  
.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.DynamicSecret.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the secret was last updated.
  
  
.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.DynamicSecret.secret:

secret
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The actual secret information.
  Security sensitive information is redacted (replaced with "[redacted]") for
  private keys and passwords in TLS certificates.
  
  


.. _envoy_api_msg_admin.v2alpha.SecretsConfigDump.StaticSecret:

admin.v2alpha.SecretsConfigDump.StaticSecret
--------------------------------------------

`[admin.v2alpha.SecretsConfigDump.StaticSecret proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/admin/v2alpha/config_dump.proto#L264>`_

StaticSecret specifies statically loaded secret in bootstrap.

.. code-block:: json

  {
    "name": "...",
    "last_updated": "{...}",
    "secret": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.StaticSecret.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name assigned to the secret.
  
  
.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.StaticSecret.last_updated:

last_updated
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) The timestamp when the secret was last updated.
  
  
.. _envoy_api_field_admin.v2alpha.SecretsConfigDump.StaticSecret.secret:

secret
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) The actual secret information.
  Security sensitive information is redacted (replaced with "[redacted]") for
  private keys and passwords in TLS certificates.
  
  


